2000-06-03  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/include/complex.h, src/include/macros.h,
	src/include/memory.h, src/maths/sparse/spdefs.h: Moved definitions
	of complex into complex.h.  There are three different ways to
	declare a complex number in Spice.  We need further work to reduce
	this to only one.

	* src/maths/cmaths/Makefile.am, src/maths/cmaths/.cvsignore,
	src/maths/cmaths/test_cx_ph.c:  Added a new test and updated the
	corresponding support files.

2000-06-02  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/circuit/inp2dot.c: Refactoring introduced a bug in the line
	parsing.  Passing line as an extra parameter to the refactored
	functions fixes the bug.

2000-05-30  Arno W. Peters  <A.W.Peters@ieee.org>

	* TODO: Updated.

	* src/maths/cmaths/Makefile.am, src/maths/cmaths/test_cx_mag.c,
	src/maths/cmaths/test_cx_j.c: Added first testcases for complex
	math library.

2000-05-25  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/circuit/inp2dot.c: First refactoring of INP2dot into smaller
	functions.  Still needs work.

	* src/circuit/sperror.c: Reworked, now much simpler.

	* src/include/inpdefs.h, src/include/sperror.h: Removed redundancy
	in the definition of function prototypes.

2000-05-06  Arno W. Peters  <A.W.Peters@ieee.org>

	* src/include/fte*: Broken header files into smaller pieces.  This
	avoids long recompile times as less needs to be rebuilt on changes
	to the header files.  Adjusted all callers to use the new header
	files.  Left a warning message in the header file to indicate its
	obsolence.  You will see this message when compiling.

	* src/frontend/*: Reorganized part of the frontend commands into
	their own source file.  Moved plotting parts into new plotting
	directory.

	* src/devices/*: Removed all RCS log and rcsid from the devices
	source files.  They only give extra clutter and all the
	information you need is available through CVS.

2000-05-04  Arno W. Peters  <A.W.Peters@ieee.org>
