@@ -244,4 +244,6 @@ src/maths/sparse/Makefile	\
 src/misc/Makefile		\
 src/parser/Makefile		\
 tests/Makefile			\
+tests/resistance/Makefile	\
+tests/filters/Makefile		\
 )
