@@ -1,4 +1,0 @@
-#! /bin/sh
-
-. $srcdir/config.sh
-spicetest diffpair
