@@ -1,0 +1,106 @@
+
+Circuit: A Simple AC Run
+
+Circuit: A Simple AC Run
+
+
+a simple ac run
+.op
+.ac dec 10 1k 1meg
+v1 1 0 dc 0 ac 1 sin 0 1 1k 0 0 distof1 0 distof2 0
+r1 1 2 10k
+r2 2 0 10k
+c1 2 0 1n
+.options list node post trans
+.end
+
+Operating point information:
+
+	Node	Voltage
+	----	-------
+	V(2)	0.000000e+00
+	V(1)	0.000000e+00
+
+	Source	Current
+	------	-------
+
+	v1#branch	0.000000e+00
+
+ Capacitor models (Fixed capacitor)
+ model             C
+
+        cj         0
+      cjsw         0
+      defw     1e-05
+    narrow         0
+
+ Resistor models (Simple linear resistor)
+ model             R
+
+       rsh         0
+    narrow         0
+       tc1         0
+       tc2         0
+      defw     1e-05
+
+ Capacitor: Fixed capacitor
+ device           c1
+ model             C
+capacitanc     1e-09
+         i  2.69e-312
+         p  2.69e-312
+
+ Resistor: Simple linear resistor
+ device           r2        r1
+ model             R         R
+resistance     1e+04     1e+04
+        ac         0         0
+         i         0         0
+         p         0         0
+
+ Vsource: Independent voltage source
+ device           v1
+        dc         0
+     acmag         1
+         i         0
+         p        -0
+
+                                A Simple AC Run
+--------------------------------------------------------------------------------
+Index   frequency                       v(2)                            
+--------------------------------------------------------------------------------
+0	1.000000e+03,	0.000000e+00	4.995070e-01,	-1.569248e-02	
+1	1.258925e+03,	0.000000e+00	4.992191e-01,	-1.974427e-02	
+2	1.584893e+03,	0.000000e+00	4.987635e-01,	-2.483388e-02	
+3	1.995262e+03,	0.000000e+00	4.980431e-01,	-3.121884e-02	
+4	2.511886e+03,	0.000000e+00	4.969056e-01,	-3.921243e-02	
+5	3.162278e+03,	0.000000e+00	4.951134e-01,	-4.918748e-02	
+6	3.981072e+03,	0.000000e+00	4.922993e-01,	-6.157141e-02	
+7	5.011872e+03,	0.000000e+00	4.879042e-01,	-7.682179e-02	
+8	6.309573e+03,	0.000000e+00	4.810969e-01,	-9.536356e-02	
+9	7.943282e+03,	0.000000e+00	4.706888e-01,	-1.174583e-01	
+10	1.000000e+04,	0.000000e+00	4.550849e-01,	-1.429691e-01	
+11	1.258925e+04,	0.000000e+00	4.323679e-01,	-1.710028e-01	
+12	1.584893e+04,	0.000000e+00	4.006689e-01,	-1.994966e-01	
+13	1.995262e+04,	0.000000e+00	3.589592e-01,	-2.250064e-01	
+14	2.511886e+04,	0.000000e+00	3.081227e-01,	-2.431496e-01	
+15	3.162278e+04,	0.000000e+00	2.516406e-01,	-2.499946e-01	
+16	3.981072e+04,	0.000000e+00	1.949905e-01,	-2.438728e-01	
+17	5.011872e+04,	0.000000e+00	1.437140e-01,	-2.262814e-01	
+18	6.309573e+04,	0.000000e+00	1.014372e-01,	-2.010698e-01	
+19	7.943282e+04,	0.000000e+00	6.918213e-02,	-1.726410e-01	
+20	1.000000e+05,	0.000000e+00	4.599983e-02,	-1.445127e-01	
+21	1.258925e+05,	0.000000e+00	3.004398e-02,	-1.188249e-01	
+22	1.584893e+05,	0.000000e+00	1.938636e-02,	-9.652642e-02	
+23	1.995262e+05,	0.000000e+00	1.240953e-02,	-7.778670e-02	
+24	2.511886e+05,	0.000000e+00	7.902266e-03,	-6.235934e-02	
+25	3.162278e+05,	0.000000e+00	5.015244e-03,	-4.982439e-02	
+26	3.981072e+05,	0.000000e+00	3.176162e-03,	-3.972396e-02	
+27	5.011872e+05,	0.000000e+00	2.008732e-03,	-3.162801e-02	
+28	6.309573e+05,	0.000000e+00	1.269306e-03,	-2.516032e-02	
+29	7.943282e+05,	0.000000e+00	8.016290e-04,	-2.000430e-02	
+30	1.000000e+06,	0.000000e+00	5.060931e-04,	-1.589938e-02	
+
+
+
+
