@@ -1,0 +1,75 @@
+
+Circuit: A simple resistor with a voltage source
+
+Circuit: A simple resistor with a voltage source
+
+
+                    A simple resistor with a voltage source
+--------------------------------------------------------------------------------
+Index   time            v1#branch       
+--------------------------------------------------------------------------------
+0	0.000000e+00	-1.000000e-04	
+1	1.200000e-12	-1.000000e-04	
+2	2.400000e-12	-1.000000e-04	
+3	4.800000e-12	-1.000000e-04	
+4	9.600000e-12	-1.000000e-04	
+5	1.920000e-11	-1.000000e-04	
+6	3.840000e-11	-1.000000e-04	
+7	7.680000e-11	-1.000000e-04	
+8	1.536000e-10	-1.000000e-04	
+9	2.736000e-10	-1.000000e-04	
+10	3.936000e-10	-1.000000e-04	
+11	5.136000e-10	-1.000000e-04	
+12	6.336000e-10	-1.000000e-04	
+13	7.536000e-10	-1.000000e-04	
+14	8.736000e-10	-1.000000e-04	
+15	9.936000e-10	-1.000000e-04	
+16	1.113600e-09	-1.000000e-04	
+17	1.233600e-09	-1.000000e-04	
+18	1.353600e-09	-1.000000e-04	
+19	1.473600e-09	-1.000000e-04	
+20	1.593600e-09	-1.000000e-04	
+21	1.713600e-09	-1.000000e-04	
+22	1.833600e-09	-1.000000e-04	
+23	1.953600e-09	-1.000000e-04	
+24	2.073600e-09	-1.000000e-04	
+25	2.193600e-09	-1.000000e-04	
+26	2.313600e-09	-1.000000e-04	
+27	2.433600e-09	-1.000000e-04	
+28	2.553600e-09	-1.000000e-04	
+29	2.673600e-09	-1.000000e-04	
+30	2.793600e-09	-1.000000e-04	
+31	2.913600e-09	-1.000000e-04	
+32	3.033600e-09	-1.000000e-04	
+33	3.153600e-09	-1.000000e-04	
+34	3.273600e-09	-1.000000e-04	
+35	3.393600e-09	-1.000000e-04	
+36	3.513600e-09	-1.000000e-04	
+37	3.633600e-09	-1.000000e-04	
+38	3.753600e-09	-1.000000e-04	
+39	3.873600e-09	-1.000000e-04	
+40	3.993600e-09	-1.000000e-04	
+41	4.113600e-09	-1.000000e-04	
+42	4.233600e-09	-1.000000e-04	
+43	4.353600e-09	-1.000000e-04	
+44	4.473600e-09	-1.000000e-04	
+45	4.593600e-09	-1.000000e-04	
+46	4.713600e-09	-1.000000e-04	
+47	4.833600e-09	-1.000000e-04	
+48	4.953600e-09	-1.000000e-04	
+49	5.073600e-09	-1.000000e-04	
+50	5.193600e-09	-1.000000e-04	
+51	5.313600e-09	-1.000000e-04	
+52	5.433600e-09	-1.000000e-04	
+53	5.553600e-09	-1.000000e-04	
+54	5.673600e-09	-1.000000e-04	
+
+Index   time            v1#branch       
+--------------------------------------------------------------------------------
+55	5.793600e-09	-1.000000e-04	
+56	5.913600e-09	-1.000000e-04	
+57	6.000000e-09	-1.000000e-04	
+
+
+
+
